@@ -14,3 +14,4 @@
 - soap_base: fix code that overwrites user-supplied attributes in serialize_val
 - soap_base: use arrays-of-arrays rather than attempting multi-dimensional in serialize_val
 - xmlschema: emit import statements and qualify all elements with prefix in serializeSchema (better interop with validation tools)
+- soapclient: get xml character encoding from HTTP Content-Type header if provided, e.g. text/xml;charset="UTF-8"
